maze.island.IslandMaze.scala.error
Erreur de compilation :
IslandMaze:52: error: not found: value isFacingWAll
  if (!isFacingWAll()) {
       ^